[gd_scene load_steps=2 format=3 uid="uid://y5c0ts8lm4ot"]

[ext_resource type="Script" path="res://scripts/ui/split_slider.gd" id="1_duapj"]

[node name="SplitSlider" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_duapj")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 46.0
offset_right = 109.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
text = "Confirm"

[node name="ValueSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -50.0
offset_right = 255.0
offset_bottom = 52.0

[node name="MinimumValueText" type="RichTextLabel" parent="ValueSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.259
anchor_top = 0.5
anchor_right = 0.259
anchor_bottom = 0.5
offset_left = -247.126
offset_top = -41.0
offset_right = -61.126
offset_bottom = -4.0
bbcode_enabled = true
text = "[center]0[/center]"

[node name="MaximumValueText" type="RichTextLabel" parent="ValueSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.727
anchor_top = 0.5
anchor_right = 0.727
anchor_bottom = 0.5
offset_left = 54.3219
offset_top = -45.0
offset_right = 240.322
offset_bottom = -9.0
bbcode_enabled = true
text = "[center]100[/center]"

[node name="ValueText" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.456118
anchor_top = 0.394741
anchor_right = 0.516826
anchor_bottom = 0.436543
offset_left = 0.552002
offset_top = 0.207962
offset_right = -0.384033
offset_bottom = 4.11996
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
metadata/_edit_use_anchors_ = true

[connection signal="value_changed" from="ValueSlider" to="." method="_on_slider_value_changed"]
[connection signal="text_submitted" from="ValueText" to="." method="_on_value_text_submitted"]
